Fixed Header Spacing / Reviews Display

--- a/src/css/01-base/_base.sass
+++ b/src/css/01-base/_base.sass
@@ -6,7 +6,7 @@ h1, h2, h3, h4, h5, h6
   color: $primary-color
   font-weight: bold
   text-transform: uppercase
-  margin: 10px 0
+  margin: 10px 0 15px
 
 .gigantic
   font-size: 110px
