--- a/src/css/02-layout/_reviews.sass
+++ b/src/css/02-layout/_reviews.sass
@@ -1,7 +1,6 @@
 section.section-reviews
   h2
     text-align: center
-    margin-bottom: 50px
 
   .reviews
     display: grid
